--- a/MovieRecommendationSystem.ipynb
+++ b/MovieRecommendationSystem.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "1fda1d50-9cc7-4077-96bf-4fde0580834d",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "cf589efb-1faf-44d7-bc7f-0c4d872547b4",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "24b76709-383d-41f1-be01-9a9ba5080630",
    "metadata": {},
    "outputs": [
@@ -212,12 +212,6 @@
    ],
    "source": [
     "\n",
-    "# Load datasets\n",
-    "ratings_df = pd.read_csv(\"ratings.csv\")\n",
-    "movies_df = pd.read_csv(\"movies.csv\")\n",
-    "tags_df   = pd.read_csv(\"tags.csv\")\n",
-    "links_df  = pd.read_csv(\"links.csv\")\n",
-    "\n",
     "# Function to print description\n",
     "def describe_dataframe(df, name):\n",
     "    print(f\"\\n📂 {name} DataFrame\")\n",
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "057c35e3-916d-40d0-9e44-369817c15cae",
    "metadata": {},
    "outputs": [],
@@ -260,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "0ce3e381-b1dc-474e-9dcf-a2c8267d3374",
    "metadata": {},
    "outputs": [
@@ -294,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "56a23b18-efe0-438f-8dc6-d86447ae8efb",
    "metadata": {},
    "outputs": [],
@@ -306,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "dd7d024c-4896-495b-8a33-fb46b8b9e375",
    "metadata": {},
    "outputs": [
@@ -349,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "be55e685-dfad-45f2-9cb6-9ce683b8bde9",
    "metadata": {},
    "outputs": [
@@ -398,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "b9556548-8b1c-468d-a3d0-bb19a528466c",
    "metadata": {},
    "outputs": [
@@ -406,8 +400,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['level_0', 'index', 'movieId', 'title', 'genres', 'userId', 'tag',\n",
-      "       'timestamp', 'content', 'avg_rating'],\n",
+      "Index(['index', 'movieId', 'title', 'genres', 'userId', 'tag', 'timestamp',\n",
+      "       'content', 'avg_rating'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -418,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "475d2bfd-11c9-4c13-b382-516a3ffafafb",
    "metadata": {},
    "outputs": [
@@ -453,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "4e893ce5-9590-4650-94a5-31140cf3adf5",
    "metadata": {},
    "outputs": [
@@ -472,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "9d411514-ed9d-4a66-8349-0fad9d0b1af6",
    "metadata": {},
    "outputs": [],
@@ -482,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "e1d2d9fb-d6d7-46fe-bc07-e379a3a7d96a",
    "metadata": {},
    "outputs": [],
@@ -492,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "id": "fc67e39d-7c15-43e3-af16-e3cb56297bad",
    "metadata": {},
    "outputs": [],
@@ -514,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "id": "320b6df6-799c-42ab-a74e-ef659ae90695",
    "metadata": {},
    "outputs": [],
@@ -526,10 +520,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "614ad219-adfb-4949-8a3f-eb78cc7a3077",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Search by movie title or genre:  Horror\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -548,54 +549,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11642</th>\n",
-       "      <td>Wow! A Talking Fish! (1983)</td>\n",
-       "      <td>Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>A fisherman catches a talking fish and spares its life. After that, he meets a grotesque, evil monster in a state of constant change.</td>\n",
-       "      <td><a href=\"https://www.themoviedb.org/movie/165095\" target=\"_blank\">TMDB</a></td>\n",
-       "      <td><a href=\"https://movielens.org/movies/173351\" target=\"_blank\">MovieLens</a></td>\n",
-       "      <td><a href=\"http://www.imdb.com/title/tt1352408/\" target=\"_blank\">IMDb</a></td>\n",
+       "      <th>7041</th>\n",
+       "      <td>'Salem's Lot (2004)</td>\n",
+       "      <td>Drama|Horror|Mystery|Thriller</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>No overview available</td>\n",
+       "      <td><a href=\"https://www.themoviedb.org/movie/36763\" target=\"_blank\">TMDB</a></td>\n",
+       "      <td><a href=\"https://movielens.org/movies/27751\" target=\"_blank\">MovieLens</a></td>\n",
+       "      <td><a href=\"http://www.imdb.com/title/tt355987/\" target=\"_blank\">IMDb</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11618</th>\n",
-       "      <td>Last Year's Snow Was Falling (1983)</td>\n",
-       "      <td>Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Funny adventures of the clumsy fellow whom his wife dispatched to the forest to bring home a New Year tree...</td>\n",
-       "      <td><a href=\"https://www.themoviedb.org/movie/145760\" target=\"_blank\">TMDB</a></td>\n",
-       "      <td><a href=\"https://movielens.org/movies/172577\" target=\"_blank\">MovieLens</a></td>\n",
-       "      <td><a href=\"http://www.imdb.com/title/tt219233/\" target=\"_blank\">IMDb</a></td>\n",
+       "      <th>9473</th>\n",
+       "      <td>Kill List (2011)</td>\n",
+       "      <td>Horror|Mystery|Thriller</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>Nearly a year after a botched job, a hitman takes a new assignment with the promise of a big payoff for three killings. What starts off as an easy task soon unravels, sending the killer into the heart of darkness.</td>\n",
+       "      <td><a href=\"https://www.themoviedb.org/movie/74725\" target=\"_blank\">TMDB</a></td>\n",
+       "      <td><a href=\"https://movielens.org/movies/89837\" target=\"_blank\">MovieLens</a></td>\n",
+       "      <td><a href=\"http://www.imdb.com/title/tt1788391/\" target=\"_blank\">IMDb</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10634</th>\n",
-       "      <td>Stuart Little 3: Call of the Wild (2005)</td>\n",
-       "      <td>Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>With school out for the summer,  The Littles are vacationing in a cabin by the lake, and Stuart is so excited he could burst! But when Snowbell the cat is captured by a mean-spirited creature known simply as the Beast, it's up to Stuart and a skunk named Reeko to rescue him and a few other friends.</td>\n",
-       "      <td><a href=\"https://www.themoviedb.org/movie/30178\" target=\"_blank\">TMDB</a></td>\n",
-       "      <td><a href=\"https://movielens.org/movies/121781\" target=\"_blank\">MovieLens</a></td>\n",
-       "      <td><a href=\"http://www.imdb.com/title/tt472602/\" target=\"_blank\">IMDb</a></td>\n",
+       "      <th>9187</th>\n",
+       "      <td>Saw VII 3D - The Final Chapter (2010)</td>\n",
+       "      <td>Horror|Mystery|Thriller</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>As a deadly battle rages over Jigsaw's brutal legacy, a group of Jigsaw survivors gathers to seek the support of self-help guru and fellow survivor Bobby Dagen, a man whose own dark secrets unleash a new wave of terror.</td>\n",
+       "      <td><a href=\"https://www.themoviedb.org/movie/41439\" target=\"_blank\">TMDB</a></td>\n",
+       "      <td><a href=\"https://movielens.org/movies/81535\" target=\"_blank\">MovieLens</a></td>\n",
+       "      <td><a href=\"http://www.imdb.com/title/tt1477076/\" target=\"_blank\">IMDb</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9709</th>\n",
-       "      <td>Presto (2008)</td>\n",
-       "      <td>Animation|Children|Comedy|Fantasy</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Dignity. Poise. Mystery. We expect nothing less from the great turn-of-the-century magician, Presto. But when Presto neglects to feed his rabbit one too many times, the magician finds he isn't the only one with a few tricks up his sleeve!</td>\n",
-       "      <td><a href=\"https://www.themoviedb.org/movie/13042\" target=\"_blank\">TMDB</a></td>\n",
-       "      <td><a href=\"https://movielens.org/movies/95311\" target=\"_blank\">MovieLens</a></td>\n",
-       "      <td><a href=\"http://www.imdb.com/title/tt1245104/\" target=\"_blank\">IMDb</a></td>\n",
+       "      <th>5598</th>\n",
+       "      <td>Tenant, The (Locataire, Le) (1976)</td>\n",
+       "      <td>Drama|Horror|Mystery|Thriller</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>A quiet and inconspicuous man rents an apartment in Paris where he finds himself drawn into a rabbit hole of dangerous paranoia.</td>\n",
+       "      <td><a href=\"https://www.themoviedb.org/movie/11482\" target=\"_blank\">TMDB</a></td>\n",
+       "      <td><a href=\"https://movielens.org/movies/6530\" target=\"_blank\">MovieLens</a></td>\n",
+       "      <td><a href=\"http://www.imdb.com/title/tt74811/\" target=\"_blank\">IMDb</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11626</th>\n",
-       "      <td>Vovka in the Kingdom of Far Far Away (1965)</td>\n",
-       "      <td>Adventure|Animation|Children|Fantasy</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>A schoolboy gets into a fairy tale with the help of a librarian and DIY book. But life in the magical land is not as easy as it seems.</td>\n",
-       "      <td><a href=\"https://www.themoviedb.org/movie/160046\" target=\"_blank\">TMDB</a></td>\n",
-       "      <td><a href=\"https://movielens.org/movies/172793\" target=\"_blank\">MovieLens</a></td>\n",
-       "      <td><a href=\"http://www.imdb.com/title/tt213309/\" target=\"_blank\">IMDb</a></td>\n",
+       "      <th>8938</th>\n",
+       "      <td>Triangle (2009)</td>\n",
+       "      <td>Drama|Horror|Mystery|Thriller</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>When Jess sets sail on a yacht with a group of friends, she cannot shake the feeling that there is something wrong.</td>\n",
+       "      <td><a href=\"https://www.themoviedb.org/movie/26466\" target=\"_blank\">TMDB</a></td>\n",
+       "      <td><a href=\"https://movielens.org/movies/74228\" target=\"_blank\">MovieLens</a></td>\n",
+       "      <td><a href=\"http://www.imdb.com/title/tt1187064/\" target=\"_blank\">IMDb</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -604,7 +605,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +639,7 @@
     "    matches = merged_df[merged_df['title'].str.contains(title, case=False, na=False)]\n",
     "    if matches.empty:\n",
     "        print(\"Movie not found!\")\n",
-    "        return pd.DataFrame()\n",
+    "        return HTML(\"<p>No recommendations available</p>\")\n",
     "    \n",
     "    idx = matches.index[0]\n",
     "    \n",
@@ -672,8 +673,12 @@
     "    # Render clickable links in Jupyter\n",
     "    return HTML(display_df.to_html(escape=False))\n",
     "\n",
-    "# Example\n",
-    "recommend_movies_full(\"Toy Story\", 5)\n"
+    "\n",
+    "# -------------------------------\n",
+    "# Run recommender with user input\n",
+    "# -------------------------------\n",
+    "movie_name = input(\"Search by movie title or genre: \")\n",
+    "recommend_movies_full(movie_name, 5)\n"
    ]
   },
   {
